mise a jour bouton de fin sur bikeshop part1

--- a/week2/project/bikeshop/part1/shop.html
+++ b/week2/project/bikeshop/part1/shop.html
@@ -58,14 +58,44 @@
             <td class="text-center">1358€</td>
             <td class="text-center"><button type="button" class="btn btn-outline-info btn-sm"name="button"><i class="far fa-trash-alt"></i></button></td>
           </tr>
+          <tr class="bg-light">
+            <th class="text-center" scope="row">1</th>
+            <td class="text-center"><img style="height: 40px;" src="assets/bike-1.jpg"></td>
+            <td class="text-center">BIKO45</td>
+            <td class="d-flex align-items-center justify-content-center"><input class="mr-1" type="text" placeholder="Quantity"><button type="button" class="btn btn-outline-info btn-sm"name="button"><i class="fas fa-sync-alt"></i></button></td>
+            <td class="text-center">679€</td>
+            <td class="text-center">1358€</td>
+            <td class="text-center"><button type="button" class="btn btn-outline-info btn-sm"name="button"><i class="far fa-trash-alt"></i></button></td>
+          </tr>
+          <tr class="bg-light">
+            <th class="text-center" scope="row">1</th>
+            <td class="text-center"><img style="height: 40px;" src="assets/bike-1.jpg"></td>
+            <td class="text-center">BIKO45</td>
+            <td class="d-flex align-items-center justify-content-center"><input class="mr-1" type="text" placeholder="Quantity"><button type="button" class="btn btn-outline-info btn-sm"name="button"><i class="fas fa-sync-alt"></i></button></td>
+            <td class="text-center">679€</td>
+            <td class="text-center">1358€</td>
+            <td class="text-center"><button type="button" class="btn btn-outline-info btn-sm"name="button"><i class="far fa-trash-alt"></i></button></td>
+          </tr>
+          <tr class="">
+            <th scope="row"></th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="text-center">Total Basket:</td>
+            <td class="text-center">3056€</td>
+            <td></td>
+          </tr>
+          <tr class="table-borderless">
+            <th scope="row"></th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="text-center"><button type="button" class="btn btn-outline-info btn-sm"name="button">Checkout</button></td>
+          </tr>
         </tbody>
       </table>
-
-      <div class="d-flex justify-content-end align-items-end">
-        <h6 class="mr-2">Total Basket:</h6>
-        <h6 class="mr-3">3056€</h6>
-        <button type="button" class="btn btn-outline-info btn-sm"name="button">Checkout</button>
-      </div>
     </div>
   </div>
   
